# YAZAKI-DLL

./: .gitignore  BUILD_INSTRUCTIONS.md  BloodPressureEstimation.def  BloodPressureEstimation.h  BloodPressureEstimation_Balanced20MB.spec  BloodPressureEstimation_Fixed.cpp  BloodPressureEstimation_Fixed.h  BloodPressureTest.cs  BloodPressureWrapper.cs  BloodPressureWrapper.csproj  CLAUDE.md  CSharpDllTest.cs  DEPLOYMENT_GUIDE.md  DEPLOY_DOWNLOADED_FILES.md  FFMPEG_UPDATE_README.md  FINAL_DEPLOYMENT_CHECKLIST.md  GITHUB_ACTIONS_SETUP.md  INTEGRATION_GUIDE.md  Program.cs.template  QUICK_FFMPEG_UPDATE.md  QUICK_FIX_README.md  README.md  README.txt  README_CYTHON.md  README_DLL.md  README_TEST.md  SampleApp.cs  SimpleBloodPressureTest.cs  TestApp.csproj  WINDOWS_64BIT_DLL_BUILD_GUIDE.md  WINDOWS_BUILD_INSTRUCTIONS.md  WINDOWS_DLL_BUILD_GUIDE.md  bp_estimation_balanced_20mb.py  bp_estimation_cython.pyx  bp_estimation_dll.py  bp_estimation_facemesh_spec_compliant.py  bp_estimation_optimized.py  bp_result_20250706122050570_TEST001_20250706_122112.csv  build_accurate_20mb_dll.py  build_balanced_20mb_dll.py  (+49 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-and-test.yml  build-cpp-dll.yml  build-cython-dll-test.yml  build-cython-dll.yml  build-ffmpeg.yml  build-mediapipe.yml  build-optimized-sub.yml  build-optimized.yml  build-slim-ffmpeg.yml  test-blood-pressure-estimation-optimal.yml  test-package-bp.yml
CppBloodPressureDLL/: CMakeLists.txt  INTEGRATION_GUIDE.md  QUICK_START.md  README.md  build_custom_opencv.bat  build_individual_opencv.bat  build_lightweight_opencv.bat  create_individual_package.bat  create_package_info.ps1  test_github_actions_optimization.bat
CppBloodPressureDLL/include/: BloodPressureDLL.h
CppBloodPressureDLL/models/: analyze_pkl_models.py  convert_pkl_to_onnx.py  convert_to_onnx.py  create_dummy_models.py  diastolicbloodpressure.onnx
CppBloodPressureDLL/package/: INTEGRATION_GUIDE.md
CppBloodPressureDLL/package/models/: systolicbloodpressure.onnx
CppBloodPressureDLL/src/: BloodPressureDLL.cpp  bp_estimator.cpp  bp_estimator.h  bp_estimator_opencv.cpp  peak_detect.cpp  peak_detect.h  rppg.cpp  rppg.h  rppg_lightweight.cpp
CppBloodPressureDLL/test/: CSharpTest.cs  CSharpTest.csproj  test_app.cpp
CppWrapperDLL/: BloodPressureWrapper.h  CMakeLists.txt  CppWrapperDLL.cpp  README.md
dist_csharp/: README.txt
lightweight_runtime_csharp/: test_lightweight_runtime.cs
reference/: bp-estimation-by-video-opencv.py  bp-estimation-by-video.py  bp-estimation.py
sample-data/: sample_1M.webm
scripts/: build-dll.ps1
specifications/: IKIジャパン様血圧測定IF仕様書_20250704矢崎(IKI様CSV項目反映済み).xlsx
test_environment/: bp_estimation_simple.py
tests/CSharpTest/: BloodPressureTest.csproj  Program.cs
tests/test-data/: README.md
